syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_outer_classname = "FaultToleranceGRPC";
option java_package = "network";

package grpc.health.v1;

message BasicInfo {
  string senderUUID = 1;
  google.protobuf.Timestamp time = 2;
}

message HealthCheckRequest {
  BasicInfo sender = 1;
  string service = 2;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  BasicInfo sender = 1;
  ServingStatus status = 2;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message CheckConnection {
  BasicInfo sender = 1;
  string checkUUID = 2;
}

message ConnectionResult {
  BasicInfo sender = 1;
  bool result = 2;
}

message CheckIn {
  BasicInfo sender = 1;
}

message LeaderDown {
  BasicInfo sender = 1;
}

service Election {
  rpc CheckConnection(CheckConnection) returns (ConnectionResult);
  rpc CheckIn(CheckIn) returns (BasicInfo);
  rpc LeaderDown(LeaderDown) returns (google.protobuf.Empty);
}